@@ -65,7 +65,8 @@ void ExecutiveSetAllVisib(int state);
 void ExecutiveSetRepVisib(char *name,int rep,int state);
 void ExecutiveSetAllRepVisib(char *name,int rep,int state);
 void ExecutiveSetObjVisib(char *name,int state);
-int ExecutiveCenter(char *name,int preserve,char *oname,float *pos,int state);
+int ExecutiveOrigin(char *name,int preserve,char *oname,float *pos,int state);
+int ExecutiveCenter(char *name,int state,int inclusive);
 int ExecutiveWindowZoom(char *name,float buffer,int state,int inclusive);
 int ExecutiveGetMoment(char *name,Matrix33d mi,int state);
 void ExecutiveOrient(char *sele,Matrix33d mi,int state);
